--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "framer-motion": "^12.23.25",
+    "groq-sdk": "^0.37.0",
+    "marked": "^17.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
