--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
     "groq-sdk": "^0.37.0",
     "marked": "^17.0.1",
